// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A. Whitespace variations 1`] = `
Object {
  "buffer": "/***/",
  "comment": "/***/",
  "lines": Array [],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 2`] = `
Object {
  "buffer": " /***/ ",
  "comment": "/***/",
  "lines": Array [],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 3`] = `
Object {
  "buffer": " /** */ ",
  "comment": "/** */",
  "lines": Array [],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 4`] = `
Object {
  "buffer": " /**[n][n]*/ ",
  "comment": "/**[n][n]*/",
  "lines": Array [
    "",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 5`] = `
Object {
  "buffer": " /**L1*/ ",
  "comment": "/**L1*/",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 6`] = `
Object {
  "buffer": " /** L1 */ ",
  "comment": "/** L1 */",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 7`] = `
Object {
  "buffer": " /**L1[n]*/ ",
  "comment": "/**L1[n]*/",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 8`] = `
Object {
  "buffer": " /**L1*[n]*/ ",
  "comment": "/**L1*[n]*/",
  "lines": Array [
    "L1*",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 9`] = `
Object {
  "buffer": " /**[n]L1*/ ",
  "comment": "/**[n]L1*/",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 10`] = `
Object {
  "buffer": " /**[n] L1 */ ",
  "comment": "/**[n] L1 */",
  "lines": Array [
    " L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 11`] = `
Object {
  "buffer": " /**[n]L1[n]*/ ",
  "comment": "/**[n]L1[n]*/",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 12`] = `
Object {
  "buffer": " /**[n]L1[n][n]L2*/ ",
  "comment": "/**[n]L1[n][n]L2*/",
  "lines": Array [
    "L1",
    "",
    "L2",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 13`] = `
Object {
  "buffer": " /**[n]*L1[n]*/ ",
  "comment": "/**[n]*L1[n]*/",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 14`] = `
Object {
  "buffer": " /**[n] * L1[n]*/ ",
  "comment": "/**[n] * L1[n]*/",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 15`] = `
Object {
  "buffer": " /**[n] * L1[n] */ ",
  "comment": "/**[n] * L1[n] */",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 16`] = `
Object {
  "buffer": " /**L1[n] *L2[n]L3*/ ",
  "comment": "/**L1[n] *L2[n]L3*/",
  "lines": Array [
    "L1",
    "L2",
    "L3",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 17`] = `
Object {
  "buffer": " /** L1[n] * L2[n] L3*/ ",
  "comment": "/** L1[n] * L2[n] L3*/",
  "lines": Array [
    "L1",
    "L2",
    " L3",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 18`] = `
Object {
  "buffer": " /** L1 [n] * L2 [n] L3 */ ",
  "comment": "/** L1 [n] * L2 [n] L3 */",
  "lines": Array [
    "L1",
    "L2",
    " L3",
  ],
  "logMessages": Array [],
}
`;

exports[`A. Whitespace variations 19`] = `
Object {
  "buffer": "/**  L1  [r][n] *  L2  [r][n]  L3  [r][n]  L4 */",
  "comment": "/**  L1  [r][n] *  L2  [r][n]  L3  [r][n]  L4 */",
  "lines": Array [
    " L1",
    " L2",
    "  L3",
    "  L4",
  ],
  "logMessages": Array [],
}
`;

exports[`B. Extra stars 1`] = `
Object {
  "buffer": " /****/ ",
  "comment": "/****/",
  "lines": Array [
    "*",
  ],
  "logMessages": Array [],
}
`;

exports[`B. Extra stars 2`] = `
Object {
  "buffer": " /**L1**/ ",
  "comment": "/**L1**/",
  "lines": Array [
    "L1*",
  ],
  "logMessages": Array [],
}
`;

exports[`B. Extra stars 3`] = `
Object {
  "buffer": " /***L1*/ ",
  "comment": "/***L1*/",
  "lines": Array [
    "*L1",
  ],
  "logMessages": Array [],
}
`;

exports[`B. Extra stars 4`] = `
Object {
  "buffer": "[n]/*****[n] **X**[n] *****/ ",
  "comment": "/*****[n] **X**[n] *****/",
  "lines": Array [
    "***",
    "*X**",
    "***",
  ],
  "logMessages": Array [],
}
`;

exports[`C. Missing stars 1`] = `
Object {
  "buffer": "/**[n][c][c][c][n]a[n] b[n] c [n]  d[n][c][c][c][n] */",
  "comment": "/**[n][c][c][c][n]a[n] b[n] c [n]  d[n][c][c][c][n] */",
  "lines": Array [
    "[c][c][c]",
    "",
    " ",
    " ",
    "  ",
    "[c][c][c]",
  ],
  "logMessages": Array [],
}
`;

exports[`C. Missing stars 2`] = `
Object {
  "buffer": "/**[n][c][c][c][n]ee[n] ff[n] gg [n]  hh[n][c][c][c][n] */",
  "comment": "/**[n][c][c][c][n]ee[n] ff[n] gg [n]  hh[n][c][c][c][n] */",
  "lines": Array [
    "[c][c][c]",
    "ee",
    " ff",
    " gg",
    "  hh",
    "[c][c][c]",
  ],
  "logMessages": Array [],
}
`;

exports[`D. Newline styles 1`] = `
Object {
  "buffer": "[r][n]/**[r][n] * L1[r][n] */[r][n]",
  "comment": "/**[r][n] * L1[r][n] */",
  "lines": Array [
    "L1",
  ],
  "logMessages": Array [],
}
`;

exports[`D. Newline styles 2`] = `
Object {
  "buffer": "/**[r][n]L1[r][n]L2[r][n]*/",
  "comment": "/**[r][n]L1[r][n]L2[r][n]*/",
  "lines": Array [
    "L1",
    "L2",
  ],
  "logMessages": Array [],
}
`;

exports[`D. Newline styles 3`] = `
Object {
  "buffer": "/** L [r] 1 */",
  "comment": "/** L [r] 1 */",
  "lines": Array [
    "L [r] 1",
  ],
  "logMessages": Array [],
}
`;

exports[`E. Parser errors 1`] = `
Object {
  "buffer": "",
  "comment": "",
  "lines": Array [],
  "logMessages": Array [
    "Expecting a \\"/**\\" comment",
  ],
}
`;

exports[`E. Parser errors 2`] = `
Object {
  "buffer": "/*",
  "comment": "",
  "lines": Array [],
  "logMessages": Array [
    "(1,1): Expecting a \\"/**\\" comment",
  ],
}
`;

exports[`E. Parser errors 3`] = `
Object {
  "buffer": "//",
  "comment": "",
  "lines": Array [],
  "logMessages": Array [
    "(1,1): Expecting a leading \\"/**\\"",
  ],
}
`;

exports[`E. Parser errors 4`] = `
Object {
  "buffer": "/** L1[n] L2",
  "comment": "",
  "lines": Array [],
  "logMessages": Array [
    "(1,1): Unexpected end of input",
  ],
}
`;

exports[`E. Parser errors 5`] = `
Object {
  "buffer": "/** L1 *",
  "comment": "",
  "lines": Array [],
  "logMessages": Array [
    "(1,1): Unexpected end of input",
  ],
}
`;
